--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -42,6 +43,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.12",
     "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.11",
