--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^3.0.1",
     "@nestjs/typeorm": "9.0.0",
+    "@types/cron": "^2.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.9.2",
